syntax = "proto3";

package services;

import "google/api/annotations.proto";

import "Model.proto";

message OrderResponse {
    string status = 1;
    string message = 2;
}

service OrderService {
    rpc NewOrder (OrderMain) returns (OrderResponse) {}
}
